[tool.poetry]
name = "blackout-notifier"
version = "0.1.0"
description = ""
authors = ["popryho <18726515+popryho@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "blackout_notifier"}]

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.26.1"
emoji = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
